--- a/tictactoe.css
+++ b/tictactoe.css
@@ -13,7 +13,10 @@ body {
 	margin:100px auto;
 	height:100%;
 }
-
+.midContainer {
+	border:10px solid black;
+	
+}
 /* Header stuff */
 .header {
 	background-color: black;
